option java_outer_classname="GetDocumentsCommandProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message GetDocumentsCommand 
{	
	repeated string documentIds = 1;
	
}